Fixed alignemnt and text issues on about page

--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ margin: 10px;
 background: #fff;
 opacity; 0.5;
 width: 856px;
- margin: 10px;
+margin-left: 63px;
 border-width: 2pxpx;
 border-radius: 10px;
 border-style: solid;
